--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-node": "^9.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -44,7 +45,6 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "ts-node": "^9.1.0",
     "typescript": "^4.1.2"
   }
 }
