--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.14.0",
+    "npm": "6.14.8"
+  },
   "scripts": {
     "start": "ts-node server/src/index.ts",
     "server": "nodemon --exec ts-node server/src/index.ts",
     "client": "npm start --prefix react-movie-db",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix react-movie-db && npm run build --prefix react-movie-db"
   },
   "keywords": [],
   "author": "",
