--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.4",
-    "morgan": "^1.10.0",
-    "ts-node": "^9.1.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "ts-node": "^9.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
