--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
   "env": {
-    "es2021": true,
     "node": true
   },
   "extends": ["airbnb", "prettier", "prettier/@typescript-eslint"],
@@ -12,6 +11,7 @@
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "prettier/prettier": "error",
+    "decorator-position/decorator-position": "error",
     "spaced-comment": "off",
     "no-console": "warn",
     "consistent-return": "off",
