--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.8.0",
+    "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-node": "^9.1.0",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
-    "ts-node": "^9.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
@@ -49,7 +51,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.1.2"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
