--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "mongoose": "^5.11.4",
     "morgan": "^1.10.0",
     "ts-node": "^9.1.0",
-    "typescript": "^4.1.2"
-  },
-  "devDependencies": {
+    "typescript": "^4.1.2",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
-    "@types/morgan": "^1.9.2",
+    "@types/morgan": "^1.9.2"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "concurrently": "^5.3.0",
