--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "6.14.8"
   },
   "scripts": {
-    "start": "ts-node server/src/index.ts",
+    "build": "tsc -p .",
+    "start": "node build/index.js",
     "server": "nodemon --exec ts-node server/src/index.ts",
     "client": "npm start --prefix react-movie-db",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -32,13 +33,13 @@
     "mongoose": "^5.11.4",
     "morgan": "^1.10.0",
     "ts-node": "^9.1.0",
-    "typescript": "^4.1.2",
+    "typescript": "^4.1.2"
+  },
+  "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
-    "@types/morgan": "^1.9.2"
-  },
-  "devDependencies": {
+    "@types/morgan": "^1.9.2",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "concurrently": "^5.3.0",
