--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "nodemon --exec ts-node server/src/index.ts",
     "client": "npm start --prefix react-movie-db",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix react-movie-db && npm run build --prefix react-movie-db"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix react-movie-db && npm run build --prefix react-movie-db && npm run build"
   },
   "keywords": [],
   "author": "",
