--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -36,8 +37,8 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
-    "helmet": "^4.2.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
     "@types/morgan": "^1.9.2",
@@ -53,6 +54,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "helmet": "^4.2.0"
   }
 }
